--- a/fleet/fleet.yaml
+++ b/fleet/fleet.yaml
@@ -41,4 +41,4 @@ spec:
           - "microshift.service"
           - "crio.service"
           - "flightctl-agent.service"
-
+          - "otelcol-contrib.service"
