mute process errors

--- a/configuration/etc/otelcol-contrib/config.yaml
+++ b/configuration/etc/otelcol-contrib/config.yaml
@@ -11,6 +11,9 @@ receivers:
       paging:
       processes:
       process:
+        mute_process_name_error: true
+        mute_process_exe_error: true
+        mute_process_io_error: true
         metrics:
           process.cpu.utilization:
             enabled: true
