change otel cfg

--- a/configuration/etc/otelcol-contrib/config.yaml
+++ b/configuration/etc/otelcol-contrib/config.yaml
@@ -14,6 +14,8 @@ receivers:
         mute_process_name_error: true
         mute_process_exe_error: true
         mute_process_io_error: true
+        mute_process_user_error: true
+        mute_process_cgroup_error: true
         metrics:
           process.cpu.utilization:
             enabled: true
