--- a/configuration/etc/microshift/manifests/edge-ws-connector/configmap.yaml
+++ b/configuration/etc/microshift/manifests/edge-ws-connector/configmap.yaml
@@ -5,5 +5,4 @@ metadata:
   namespace: edge-ws-connector
 data:
   PORT: '8080'
-  CLI_PORT: '80'
-  WS_MANAGER: socketmanager.rciots.com
+  WS_MANAGER: ws.rciots.com
