add k8s secrets fleet

--- a/fleet/fleet-k8s-secret.yaml
+++ b/fleet/fleet-k8s-secret.yaml
@@ -34,9 +34,10 @@ spec:
             path: /configuration
         - name: config-from-k8s-secret
           configType: KubernetesSecretProviderSpec
-          name: mparra-pull-secret
-          namespace: flightctl--runtime-ext
-          mountPath: /etc/crio
+          secretRef:
+            name: mparra-pull-secret
+            namespace: flightctl--runtime-ext
+            mountPath: /etc/crio
       systemd:
         matchPatterns:
           - "microshift.service"
