add k8s secrets fleet

--- a/fleet/fleet-k8s-secret.yaml
+++ b/fleet/fleet-k8s-secret.yaml
@@ -27,7 +27,7 @@ spec:
                   overwrite: true
                   path: "/etc/motd"
         - name: microshift-manifests
-          configType: GitConfigProviderSpecdas
+          configType: GitConfigProviderSpec
           gitRef:  
             repository: claw-machine-manifests
             targetRevision: main
