add k8s secrets fleet

--- a/fleet/fleet-k8s-secret.yaml
+++ b/fleet/fleet-k8s-secret.yaml
@@ -36,7 +36,7 @@ spec:
           configType: KubernetesSecretProviderSpec
           secretRef:
             name: mparra-pull-secret
-            namespace: flightctl--runtime-ext
+            namespace: flightctl--runtime-int
             mountPath: /etc/crio
       systemd:
         matchPatterns:
